<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projectdog.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdgeLength="100dp"
            android:requiresFadingEdge="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/vc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vc_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/help_header"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc1"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />


                <TextView
                    android:id="@+id/vc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc2"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vc3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc3"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vc4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc4"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vc5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc5"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vc6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/vc6"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

            </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.667"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>