<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fadingEdgeLength="100dp"
            android:requiresFadingEdge="vertical"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <TextView
                            android:id="@+id/welcome_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="Welcome!"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/wt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/wt1"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/wt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/wt2"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/wt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/wt3"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/wt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/wt4"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                </LinearLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.667"/>

</androidx.constraintlayout.widget.ConstraintLayout>